# software_park

./: .gitignore  .gitmodules  README.md  TestGds.sln  Train.sln  readme.txt  train.sln
Dll1/: Dll1.h  Dll1.vcxproj
FileRW/: FileOperator.cpp  FileRW.cpp  FileRW.vcxproj
TestCppRef/: TestCppRef.cpp  TestCppRef.vcxproj  TestCppRef.vcxproj.filters
TestGds/: TestGds.cpp  TestGds.vcxproj  geometry_net.cpp  geometry_net.h  test_regex.cpp  test_regex.h  test_smart_ptr.cpp  test_smart_ptr.h
TestProtobuf/: TestProtobuf.cpp
archiver/: clash.md  cmake.md  cpp17.md  cpp_node.md  docker.md  fortran.md  fortran_interface.html  fortran_interface.md  gds_dispatcher.md  gds_node.md  gds_with_fortran.md  gds_with_fortran_interface.md  git_node.md  git_node2.md  git_submodule.md  google_abseil.md  gperftool.md  interview.md  misc.md  openai.md  performance_opt.md  protobuf.md  protobuf2.md  robot.md  scratch.md  summary_profession.md  summary_project.md  vscode.md
archiver/kicad/cmake/test_cmake/test1/: CMakeLists.txt  main.cc
boost_library/: boost_library.vcxproj
cmake/Train/: CMakeLists.txt  main.cc
cmake/Train/pcbcommon/: CMakeLists.txt  pcbcommon.cc  pcbcommon.h
cmake/Train/test_swig/: CMakeLists.txt  example.i  main.cpp  mintty.exe.stackdump  my_interface.i  my_source.c  my_source.h
cpp_library/: MessageQueue.cc  base.cpp  base.h  binary_tree.h  coordinate.cpp  coordinate.h  cpp_library.vcxproj  cpp_library.vcxproj.filters  data.xml  data_type.cpp  data_type.h  lib_head.h  main.cpp  mas_component.cc  mas_component.h  memory_pool.cpp  memory_pool.h  out.cereal  readme_thread.txt  test_abseil.cc  test_abseil.h  test_algorithm.cpp  test_algorithm.h  test_array.cpp  test_array.h  test_basic.cpp  test_basic.h  test_case_question.h  test_cereal.cc  test_cereal.h  test_container.cpp  test_container.h  test_cpp17.cpp  test_cpp17.h  test_geometry.cpp  test_geometry.h  test_hash.cpp  test_hash.h  test_honer.cc  test_honer.h  (+34 more)
file_rw/: FileRW.vcxproj.filters  file_operator.h
src/: MessageQueue.h  base.cpp  base.h  cpp_library.vcxproj.filters  data_type.h  main.cpp  test_algorithm.h  test_array.cc  test_array.h  test_chrono.cc  test_ckt.cc  test_ckt.h  test_container.h  test_cpp17.cpp  test_geometry.cpp  test_geometry.h  test_honer.cc  test_iterator.cpp  test_math.h  test_memory_pool.cc  test_question.cc  test_question.h  (+2 more)
(+93 files in other folders)
